# phosh

./: .gitlab-ci.yml  HACKING.md  NEWS  meson.build
.github/: FUNDING.yml
.gitlab-ci/: check-consistency  check-style.py  check-ui
data/: meson.build  phosh-session.in
data/icons/: meson.build
data/systemd/: meson.build
debian/: changelog  control  gbp.conf  phosh-plugins.install
docs/: gettingstarted.md  phosh.gsettings.rst  phosh.rst
plugins/: meson.build
plugins/caffeine-quick-setting/: meson.build
plugins/calendar/: meson.build
plugins/dark-mode-quick-setting/: meson.build
plugins/emergency-info/: meson.build
plugins/launcher-box/: meson.build
plugins/load-meter-status-icon/: load-meter-status-icon.c  load-meter-status-icon.desktop.in.in  load-meter-status-icon.h  meson.build  phosh-plugin-load-meter-status-icon.c  phosh-plugin-load-meter-status-icon.gresources.xml  si.ui
plugins/load-meter-status-icon/icons/: meson.build
plugins/location-quick-setting/: location-quick-setting.c  meson.build
plugins/media-players/: meson.build
plugins/mobile-data-quick-setting/: meson.build
plugins/syncthing-quick-setting/: folder-row.c  folder-row.h  folder-row.ui  meson.build  phosh-plugin-syncthing-quick-setting.c  phosh-plugin-syncthing-quick-setting.gresources.xml  qs.ui  syncthing-quick-setting.c  syncthing-quick-setting.desktop.in.in  syncthing-quick-setting.h
plugins/syncthing-quick-setting/dbus/: mobi.phosh.syncbus.Folder.xml  mobi.phosh.syncbus.Manager.xml
plugins/syncthing-quick-setting/icons/: meson.build
po/: POTFILES.in  bg.po  cs.po  de.po  eu.po  fa.po  fi.po  he.po  ht.po  ja.po  ka.po  kk.po  kw.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sat.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: activity.c  activity.h  ambient.c  animation.h  app-grid-button.c  app-grid.c  app-list-model.c  app-tracker.c  app-tracker.h  audio-manager.c  audio-manager.h  backlight.c  battery-info.c  brightness-manager.c  brightness-manager.h  brightness-settings.c  bt-device-row.c  bt-info.c  cell-broadcast-prompt.c  connectivity-manager.c  favorite-list-model.c  feedback-status-page.c  home.c  launcher-entry-manager.c  layersurface.c  layout-manager.c  lockscreen.c  meson.build  overview.c  phosh.gresources.xml  polkit-auth-agent.c  polkit-auth-agent.h  polkit-auth-prompt.c  polkit-auth-prompt.h  proximity.c  rotation-manager.c  sensor-proxy-manager.h  settings.c  shell-priv.h  shell.c  (+14 more)
subprojects/: gvc.wrap
tests/: meson.build  test-app-list-model.c  test-shell-notification.c  test-status-icons-box.c
tools/: app-buttons.c  app-grid-standalone.c  app-scroll.c  custom-quick-settings-standalone.c  custom-status-icons-standalone.c  meson.build  notify-blocks.c  notify-server-standalone.c  quick-settings-box-standalone.c  search.c  status-icons-box-standalone.c  widget-box-standalone.c
(+35 files in other folders)
